@@ -176,8 +176,6 @@ case "${host}" in
     AC_DEFINE(HAVE_LOGF)
     AC_DEFINE(HAVE_LOG10F)
     AC_DEFINE(HAVE_MODFF)
-    AC_DEFINE(HAVE_SIGNBIT)
-    AC_DEFINE(HAVE_SIGNBITF)
     AC_DEFINE(HAVE_SINF)
     AC_DEFINE(HAVE_SINHF)
     AC_DEFINE(HAVE_SINCOS)
@@ -207,7 +205,6 @@ case "${host}" in
       AC_DEFINE(HAVE_LOG10L)
       AC_DEFINE(HAVE_MODFL)
       AC_DEFINE(HAVE_POWL)
-      AC_DEFINE(HAVE_SIGNBITL)
       AC_DEFINE(HAVE_SINL)
       AC_DEFINE(HAVE_SINHL)
       AC_DEFINE(HAVE_SINCOSL)
